
[TestConsistentTypeExports/invalid-0 - 1]
Diagnostic 1: typeOverValue (1:1 - 1:50)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | export { Type1 } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestConsistentTypeExports/invalid-1 - 1]
Diagnostic 1: typeOverValue (1:1 - 1:57)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | export { Type1 as "🍎" } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestConsistentTypeExports/invalid-10 - 1]
Diagnostic 1: multipleExportsAreTypes (9:1 - 9:32)
Message: Type exports Alias and IFace are not values and should be exported using `export type`.
   8 | 
   9 | export { Alias, IFace, TypeNS };
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  10 | 
---

[TestConsistentTypeExports/invalid-11 - 1]
Diagnostic 1: typeOverValue (6:1 - 6:18)
Message: All exports in the declaration are only used as types. Use `export type`.
   5 | 
   6 | export { TypeNS };
     | ~~~~~~~~~~~~~~~~~~
   7 | 
---

[TestConsistentTypeExports/invalid-12 - 1]
Diagnostic 1: singleExportIsType (4:1 - 4:24)
Message: Type export T is not a value and should be exported using `export type`.
   3 | const x = 1;
   4 | export { type T, T, x };
     | ~~~~~~~~~~~~~~~~~~~~~~~~
   5 | 
---

[TestConsistentTypeExports/invalid-13 - 1]
Diagnostic 1: singleExportIsType (4:1 - 4:16)
Message: Type export T is not a value and should be exported using `export type`.
   3 | const x = 1;
   4 | export { T, x };
     | ~~~~~~~~~~~~~~~~
   5 | 
---

[TestConsistentTypeExports/invalid-14 - 1]
Diagnostic 1: typeOverValue (3:1 - 3:21)
Message: All exports in the declaration are only used as types. Use `export type`.
   2 | type T = 1;
   3 | export { type T, T };
     | ~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestConsistentTypeExports/invalid-15 - 1]
Diagnostic 1: multipleExportsAreTypes (2:1 - 7:35)
Message: Type exports Type1 and Type2 as Foo are not values and should be exported using `export type`.
   1 | 
   2 | export {
     | ~~~~~~~~
   3 |     Type1,
     | ~~~~~~~~~~
   4 |     Type2 as Foo,
     | ~~~~~~~~~~~~~~~~~
   5 |     type value1 as BScope,
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |     value2 as CScope,
     | ~~~~~~~~~~~~~~~~~~~~~
   7 | } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 | 
---

[TestConsistentTypeExports/invalid-16 - 1]
Diagnostic 1: multipleExportsAreTypes (2:1 - 7:35)
Message: Type exports Type1 and Type2 as Foo are not values and should be exported using `export type`.
   1 | 
   2 | export {
     | ~~~~~~~~
   3 |     Type1,
     | ~~~~~~~~~~
   4 |     Type2 as Foo,
     | ~~~~~~~~~~~~~~~~~
   5 |     type value1 as BScope,
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |     value2 as CScope,
     | ~~~~~~~~~~~~~~~~~~~~~
   7 | } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 | 
---

[TestConsistentTypeExports/invalid-17 - 1]
Diagnostic 1: typeOverValue (1:1 - 1:36)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | export * from './type-only-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestConsistentTypeExports/invalid-18 - 1]
Diagnostic 1: typeOverValue (1:1 - 1:44)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | export * as foo from './type-only-reexport';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestConsistentTypeExports/invalid-19 - 1]
Diagnostic 1: typeOverValue (4:1 - 4:15)
Message: All exports in the declaration are only used as types. Use `export type`.
   3 | type Foo = 1;
   4 | export { Foo };
     | ~~~~~~~~~~~~~~~
   5 | 
---

[TestConsistentTypeExports/invalid-2 - 1]
Diagnostic 1: singleExportIsType (1:1 - 1:58)
Message: Type export Type1 is not a value and should be exported using `export type`.
   1 | export { Type1, value1 } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestConsistentTypeExports/invalid-20 - 1]
Diagnostic 1: typeOverValue (3:1 - 3:15)
Message: All exports in the declaration are only used as types. Use `export type`.
   2 | import { type NAME as Foo } from './consistent-type-exports';
   3 | export { Foo };
     | ~~~~~~~~~~~~~~~
   4 | 
---

[TestConsistentTypeExports/invalid-3 - 1]
Diagnostic 1: singleExportIsType (2:1 - 2:66)
Message: Type export Type1 is not a value and should be exported using `export type`.
   1 | 
   2 | export { Type1, value1, value2 } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 | 
---

[TestConsistentTypeExports/invalid-4 - 1]
Diagnostic 1: multipleExportsAreTypes (1:1 - 1:73)
Message: Type exports Type1 and Type2 are not values and should be exported using `export type`.
   1 | export { Type1, value1, Type2, value2 } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestConsistentTypeExports/invalid-5 - 1]
Diagnostic 1: typeOverValue (1:1 - 1:57)
Message: All exports in the declaration are only used as types. Use `export type`.
   1 | export { Type2 as Foo } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestConsistentTypeExports/invalid-6 - 1]
Diagnostic 1: singleExportIsType (2:1 - 2:65)
Message: Type export Type2 as Foo is not a value and should be exported using `export type`.
   1 | 
   2 | export { Type2 as Foo, value1 } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 | 
---

[TestConsistentTypeExports/invalid-7 - 1]
Diagnostic 1: singleExportIsType (2:1 - 6:35)
Message: Type export Type2 as Foo is not a value and should be exported using `export type`.
   1 | 
   2 | export {
     | ~~~~~~~~
   3 |     Type2 as Foo,
     | ~~~~~~~~~~~~~~~~~
   4 |     value1 as BScope,
     | ~~~~~~~~~~~~~~~~~~~~~
   5 |     value2 as CScope,
     | ~~~~~~~~~~~~~~~~~~~~~
   6 | } from './consistent-type-exports';
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   7 | 
---

[TestConsistentTypeExports/invalid-8 - 1]
Diagnostic 1: typeOverValue (3:1 - 3:17)
Message: All exports in the declaration are only used as types. Use `export type`.
   2 | import { Type2 } from './consistent-type-exports';
   3 | export { Type2 };
     | ~~~~~~~~~~~~~~~~~
   4 | 
---

[TestConsistentTypeExports/invalid-9 - 1]
Diagnostic 1: singleExportIsType (3:1 - 3:25)
Message: Type export Type2 is not a value and should be exported using `export type`.
   2 | import { value2, Type2 } from './consistent-type-exports';
   3 | export { value2, Type2 };
     | ~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---
